<resources>
    <string name="app_name">Stumate</string>



    <string name="backbutton">BackButton</string>
    <string name="here_to_get_nwelcome">Here To Get\nWelcome!</string>
    <string name="default_notification_channel_id">admin_channel</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="about_stumate">About Stumate</string>
    <string name="stumate_is_a_realm_for_students_who_are_willing_to_store_all_the_subject_files_at_a_place_it_acts_like_a_container_and_one_can_filter_notes_at_any_time_with_a_perfect_blend_of_professionalism_we_act_as_a_catalyst_to_bring_the_required_change_in_the_society">Stumate is a realm for students who are willing to store all the Subject Files at a place. It acts like a Container and one can Filter Notes at any time with a Perfect Blend of Professionalism, We act as a Catalyst to bring the required change in the Society.</string>
    <string name="quot_start_succeding_stop_seeking_quot">Start Succeding Stop Seeking</string>
    <string name="developed_by">Developed by</string>
    <string name="mr_saikiran_kopparthi">Mr. Saikiran Kopparthi</string>
    <string name="t3rd_year_it_t">\t3rd Year IT\t</string>
    <string name="ms_prathyusha_kuppili">Ms. Prathyusha Kuppili</string>
    <string name="t3rd_year_it_t2">\t3rd Year IT\t</string>
    <string name="android_developer">Android Developer</string>
    <string name="we_will_hear_your_feedback_and_suggestions_and_try_to_add_new_features_based_on_your_request_thanks_for_using_stumate">We will hear your Feedback and Suggestions and try to add new features based on your request. Thanks for using Stumate!</string>
    <string name="knvrssaikiran_gmail_com">knvrssaikiran@gmail.com</string>
    <string name="please_give_your_valuable_feedback">Please give your valuable Feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="about_us">About Us</string>
    <string name="excited_to_be_a_part_of_stumate">Excited to be a part of Stumate!</string>
    <string name="enter_your_email_id">Enter your Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="class_mates">Class Mates</string>
    <string name="t_t_tsign_in_t_t_t">\t\t\tSign in\t\t\t</string>
    <string name="class_notes">Class Notes</string>
    <string name="search_by_subject_unit_author_names">Search by Subject, Unit, Author Names...</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="search_notes">Search Notes</string>
    <string name="welcome_to_stumate">Welcome to Stumate !</string>
    <string name="struck_searching_your_notes_for_the_exam_or_forgot_to_submit_the_assignment_on_time_don_t_worry_we_are_there_to_help_you">Struck searching your notes for the Exam or Forgot to submit the Assignment on Time. Don\'t Worry, We are there to help you</string>
    <string name="happy_to_help_you">Happy to help you!</string>
    <string name="search_class_notes_here">Search Class Notes here...</string>
    <string name="stumate_news">Stumate News</string>
    <string name="schedule_reminders">Schedule Reminders</string>
    <string name="don_t_miss_any_nassignment">Don\'t miss any \nAssignment</string>
    <string name="title_of_message">Title of Message</string>
    <string name="choose_relevant_type">Choose Relevant Type</string>
    <string name="enter_your_description">Enter your Description</string>
    <string name="t_t_tsend_notification_t_t_t">\t\t\tSend Notification\t\t\t</string>
    <string name="student_details">Student Details</string>
    <string name="college_name">College Name</string>
    <string name="year_of_study">Year of Study</string>
    <string name="department">Department</string>
    <string name="section">Section</string>
    <string name="t_t_tsubmit_t_t_t">\t\t\tSubmit\t\t\t</string>
    <string name="saikiran_kopparthi">Saikiran Kopparthi</string>
    <string name="name_of_student">Name of Student</string>
    <string name="_91_9381384234">+91 9381384234</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Email ID</string>
    <string name="name_of_college">Name of College</string>
    <string name="gmr_institute_of_technology">GMR Institute of Technology</string>
    <string name="current_year_and_department">Current Year and Department</string>
    <string name="_3rd_year_and_information_technology">3rd Year and Information Technology</string>
    <string name="upload_notes_or_question_papers">Upload Notes or Question Papers</string>
    <string name="upload_file">upload file</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="choose_unit_number">Choose Unit Number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="t_tother_files_t_t">\t\tOther Files\t\t</string>
    <string name="choose_file_type">Choose File Type</string>
    <string name="timage_t">\tIMAGE\t</string>
    <string name="tpdf_t">\tPDF\t</string>
    <string name="tdoc_t">\tDOC\t</string>
    <string name="tppt_t">\tPPT\t</string>
    <string name="t_t_tpublish_file_t_t_t">\t\t\tPublish File\t\t\t</string>
    <string name="missed_notifications">Missed Notifications</string>
    <string name="home">Home</string>
    <string name="reminders">Reminders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="sampling_distribution_notes">Sampling Distribution Notes</string>
    <string name="tprobability_and_statistics_t">\tProbability and Statistics\t</string>
    <string name="tunit_1_t_t">\tUnit-1\t\t</string>
    <string name="posted_by_saikiran_kopparthi_5_minutes_ago">Posted by Saikiran Kopparthi 5 minutes ago</string>
    <string name="delete_file">Delete File</string>
    <string name="are_you_sure_you_want_to_delete_file">Are you sure you want to Delete File ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="by_clicking_submit_button_you_will_receive_an_email_to_reset_your_password">By Clicking Submit Button, you will receive an Email to reset your Password</string>
    <string name="enter_your_registered_email_id">Enter your Registered Email ID</string>
    <string name="submit">Submit</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="back">Back</string>
    <string name="term_paper_review_scheduled">Term Paper Review Scheduled</string>
    <string name="hello_everyone_we_have_scheduled_term_paper_review_on_monday_morining_at_9_00am_be_ready_everyone">Hello Everyone, We have scheduled Term Paper review on Monday Morining at 9.00AM. Be ready Everyone!</string>
    <string name="new_version_is_live">New Version is Live!</string>
    <string name="new_ui_and_added_facility_to_set_timely_reminders_for_assignments">New UI and added facility to set Timely Reminders for Assignments</string>
    <string name="file_published_successfully_to_your_class_group">File Published Successfully to your Class Group !</string>

    <string name="admob_app_id">ca-app-pub-2425059000755769~9451688304</string>
    <string name="admob_banner_id">ca-app-pub-2425059000755769/4087680989</string>
    <string name="admob_large_banner">ca-app-pub-2425059000755769/5578718442</string>

    <!--Testing IDs-->
    <!--<string name="admob_test_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_test_banner">ca-app-pub-3940256099942544/6300978111</string>
-->


</resources>
