<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_peekHeight="12dp"
    app:behavior_hideable="false"
    android:layout_marginBottom="40dp"
    android:layout_margin="2dp"
    app:cardCornerRadius="25dp"
    app:cardPreventCornerOverlap="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:padding="0dp"
        android:orientation="vertical"
        android:layout_margin="0dp">

        <TextView
            android:id="@+id/homePage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_home_24" />

        <TextView
            android:id="@+id/classNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_notes"
            android:textSize="18sp"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            app:drawableTint="@color/colorPrimary"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_menu_book_24" />

        <TextView
            android:id="@+id/collegeMates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_mates"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:padding="15dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_supervisor_account_24" />


        <TextView
            android:id="@+id/remainders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminders"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:padding="15dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_notifications_active_24" />



        <TextView
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_person_24"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_login_24"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/rateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            android:fontFamily="@font/cabin"
            android:drawablePadding="15dp"
            android:textColor="@color/colorPrimary"
            app:drawableStartCompat="@drawable/ic_baseline_rate_review_24"
            app:drawableTint="@color/colorPrimary" />


    </LinearLayout>
</androidx.cardview.widget.CardView>