<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardPreventCornerOverlap="true"
    android:foreground="@android:color/transparent"
    android:background="@android:color/transparent"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="18dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <!--
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:id="@+id/deleteIcon"
                    android:src="@drawable/ic_baseline_delete_forever_24"
                    app:tint="@android:color/holo_red_dark" />
        -->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:id="@+id/txtForgot"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/by_clicking_submit_button_you_will_receive_an_email_to_reset_your_password"
            android:textSize="16sp"
            android:id="@+id/txtDesc"
            android:gravity="center"
            android:layout_below="@id/txtForgot"
            android:layout_margin="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_registered_email_id"
            android:layout_below="@id/txtDesc"
            android:id="@+id/edtResEmail"
            android:background="@color/colorWhite"
            app:endIconTint="#000"
            android:layout_marginTop="15dp"
            android:visibility="visible"
            app:errorEnabled="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:hintTextColor="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editResEmail"
                android:inputType="text"
                android:background="@color/colorWhite"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>





            <Button
                android:layout_width="160dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_height="wrap_content"
                android:id="@+id/btnSubmit"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edtResEmail"
                android:layout_marginStart="20dp"
                android:text="@string/submit" />



    </RelativeLayout>


</androidx.cardview.widget.CardView>